--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     implementation "androidx.room:room-runtime:2.6.1"
     kapt "androidx.room:room-compiler:2.6.1"
     implementation "androidx.room:room-ktx:2.6.1"
+
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.6'
+    implementation "com.google.code.gson:gson:2.10.1"
 }
